--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
     ////////////////////////////////////////////////////////
 
+    // Retrofit Compose Integration
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    ////////////////////////////////////////////////////////
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
