--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     ////////////////////////////////////////////////////////
 
+    // Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    ////////////////////////////////////////////////////////
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
