--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: "androidx.navigation.safeargs"
+
 android {
     compileSdk 32
 
@@ -39,6 +41,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     ////////////////////////////////////////////////////////
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
